--- a/inventaire/web/mouvement/List.xhtml
+++ b/inventaire/web/mouvement/List.xhtml
@@ -51,7 +51,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListMouvementTitle_idArticle}"/>
                             </f:facet>
-                            <h:outputText value="#{item.idArticle}"/>
+                            <h:outputText value="#{item.idArticle.toString()}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
