Ajout consolidation et quelqes amélioration mineur

--- a/inventaire/web/index.xhtml
+++ b/inventaire/web/index.xhtml
@@ -15,8 +15,13 @@
             <p:button  outcome="/destination/List" value="Toutes les Destinations الوجهة"/>
             <br />
             <p:button outcome="/mouvement/List" value="tous les Mouvements حركة"/>
+            <br />
+            <p:button outcome="/plusMoins/List" value="Consolidation "/>
         </p:panel>
+
+
     </h:body>
+
 
 
 
