--- a/inventaire/web/template.xhtml
+++ b/inventaire/web/template.xhtml
@@ -24,6 +24,7 @@
                             <p:menuitem value="Articles" outcome="/articles/List.xhtml" />
                             <p:menuitem value="Destination" outcome="/destination/List.xhtml" />
                             <p:menuitem value="Mouvement" outcome="/mouvement/List.xhtml" />
+                            <p:menuitem value="Consolidation" outcome="/plusMoins/List.xhtml" />
                         </p:submenu>
                     </p:menubar>
                 </h:form>
